Fixes scribe test by adding XML module (#1970)